internal/gatewayapi/testdata/envoyextensionpolicy-with-extproc-with-backendtlspolicy-dedup.out.yaml
backendTLSPolicies:
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: BackendTLSPolicy
  metadata:
    name: policy-btls-grpc
    namespace: envoy-gateway
  spec:
    targetRefs:
    - group: ""
      kind: Service
      name: grpc-backend
      sectionName: grpc
    validation:
      caCertificateRefs:
      - group: ""
        kind: ConfigMap
        name: ca-cmap
      hostname: grpc-backend
  status:
    ancestors:
    - ancestorRef:
        group: gateway.envoyproxy.io
        kind: EnvoyExtensionPolicy
        name: policy-for-gateway
        namespace: default
      conditions:
      - lastTransitionTime: null
        message: Resolved all the Object references.
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: BackendTLSPolicy
  metadata:
    name: policy-btls-grpc-2
    namespace: default
  spec:
    targetRefs:
    - group: ""
      kind: Service
      name: grpc-backend-2
      sectionName: grpc
    validation:
      caCertificateRefs:
      - group: ""
        kind: ConfigMap
        name: ca-cmap
      hostname: grpc-backend-2
  status:
    ancestors:
    - ancestorRef:
        group: gateway.envoyproxy.io
        kind: EnvoyExtensionPolicy
        name: policy-for-http-route
        namespace: default
      conditions:
      - lastTransitionTime: null
        message: Configmap ca-cmap not found in namespace default.
        reason: NoValidCACertificate
        status: "False"
        type: Accepted
      - lastTransitionTime: null
        message: Configmap ca-cmap not found in namespace default.
        reason: InvalidCACertificateRef
        status: "False"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: BackendTLSPolicy
  metadata:
    name: policy-btls-grpc-system-ca
    namespace: default
  spec:
    targetRefs:
    - group: ""
      kind: Service
      name: grpc-backend-system-ca
      sectionName: grpc
    validation:
      hostname: grpc-backend-system-ca
      wellKnownCACertificates: System
  status:
    ancestors:
    - ancestorRef:
        group: gateway.envoyproxy.io
        kind: EnvoyExtensionPolicy
        name: policy-for-gateway
        namespace: default
      conditions:
      - lastTransitionTime: null
        message: Resolved all the Object references.
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
envoyExtensionPolicies:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: EnvoyExtensionPolicy
  metadata:
    name: policy-for-http-route
    namespace: default
  spec:
    extProc:
    - backendRefs:
      - name: grpc-backend-2
        port: 9000
      processingMode:
        request: {}
        response: {}
    targetRef:
      group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: httproute-1
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-1
        namespace: default
        sectionName: http
      conditions:
      - lastTransitionTime: null
        message: 'ExtProc: configmap ca-cmap not found in namespace default.'
        reason: Invalid
        status: "False"
        type: Accepted
      - lastTransitionTime: null
        message: spec.targetRef is deprecated, use spec.targetRefs instead
        reason: DeprecatedField
        status: "True"
        type: Warning
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: EnvoyExtensionPolicy
  metadata:
    name: policy-for-gateway
    namespace: default
  spec:
    extProc:
    - backendRefs:
      - name: grpc-backend
        namespace: envoy-gateway
        port: 8000
      failOpen: true
      messageTimeout: 5s
      metadata:
        accessibleNamespaces:
        - envoy.filters.http.ext_authz
        writableNamespaces:
        - envoy.filters.http.my_custom
      processingMode:
        allowModeOverride: true
        request:
          attributes:
          - request.path
          body: Buffered
        response:
          attributes:
          - xds.route_metadata
          - connection.requested_server_name
          body: Streamed
    - backendRefs:
      - name: grpc-backend-system-ca
        namespace: default
        port: 9001
      processingMode:
        request: {}
        response: {}
    targetRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-1
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-1
        namespace: default
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: spec.targetRef is deprecated, use spec.targetRefs instead
        reason: DeprecatedField
        status: "True"
        type: Warning
      - lastTransitionTime: null
        message: 'This policy is being overridden by other envoyExtensionPolicies
          for these routes: [default/httproute-1]'
        reason: Overridden
        status: "True"
        type: Overridden
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-1
    namespace: default
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: http
      port: 80
      protocol: HTTP
  status:
    listeners:
    - attachedRoutes: 2
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: httproute-1
    namespace: default
  spec:
    hostnames:
    - www.foo.com
    parentRefs:
    - name: gateway-1
      namespace: default
      sectionName: http
    rules:
    - backendRefs:
      - name: service-1
        port: 8080
      matches:
      - path:
          value: /foo
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-1
        namespace: default
        sectionName: http
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: httproute-2
    namespace: default
  spec:
    hostnames:
    - www.bar.com
    parentRefs:
    - name: gateway-1
      namespace: default
      sectionName: http
    rules:
    - backendRefs:
      - name: service-1
        port: 8080
      matches:
      - path:
          value: /bar
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-1
        namespace: default
        sectionName: http
infraIR:
  default/gateway-1:
    proxy:
      listeners:
      - name: default/gateway-1/http
        ports:
        - containerPort: 10080
          name: http-80
          protocol: HTTP
          servicePort: 80
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway-1
          gateway.envoyproxy.io/owning-gateway-namespace: default
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: default/gateway-1
      namespace: envoy-gateway-system
xdsIR:
  default/gateway-1:
    accessLog:
      json:
      - path: /dev/stdout
    globalResources:
      proxyServiceCluster:
        metadata:
          kind: Service
          name: envoy-default-gateway-1-bfd08ef4
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: default/gateway-1
        settings:
        - addressType: IP
          endpoints:
          - host: 7.6.5.4
            port: 8080
            zone: zone1
          metadata:
            kind: Service
            name: envoy-default-gateway-1-bfd08ef4
            namespace: envoy-gateway-system
            sectionName: "8080"
          name: default/gateway-1
          protocol: TCP
    http:
    - address: 0.0.0.0
      externalPort: 80
      hostnames:
      - '*'
      metadata:
        kind: Gateway
        name: gateway-1
        namespace: default
        sectionName: http
      name: default/gateway-1/http
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
      routes:
      - destination:
          metadata:
            kind: HTTPRoute
            name: httproute-1
            namespace: default
          name: httproute/default/httproute-1/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.7
              port: 8080
            metadata:
              kind: Service
              name: service-1
              namespace: default
              sectionName: "8080"
            name: httproute/default/httproute-1/rule/0/backend/0
            protocol: HTTP
            weight: 1
        directResponse:
          statusCode: 500
        envoyExtensions:
          extProcs:
          - allowModeOverride: true
            authority: grpc-backend.envoy-gateway:8000
            destination:
              metadata:
                kind: EnvoyExtensionPolicy
                name: policy-for-gateway
                namespace: default
              name: envoyextensionpolicy/default/policy-for-gateway/extproc/0
              settings:
              - addressType: IP
                endpoints:
                - host: 7.7.7.7
                  port: 8000
                metadata:
                  kind: Service
                  name: grpc-backend
                  namespace: envoy-gateway
                  sectionName: "8000"
                name: envoyextensionpolicy/default/policy-for-gateway/extproc/0/backend/0
                protocol: GRPC
                tls:
                  alpnProtocols: null
                  caCertificate:
                    certificate: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKekNDQWcrZ0F3SUJBZ0lVQWw2VUtJdUttenRlODFjbGx6NVBmZE4ySWxJd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0l6RVFNQTRHQTFVRUF3d0hiWGxqYVdWdWRERVBNQTBHQTFVRUNnd0dhM1ZpWldSaU1CNFhEVEl6TVRBdwpNakExTkRFMU4xb1hEVEkwTVRBd01UQTFOREUxTjFvd0l6RVFNQTRHQTFVRUF3d0hiWGxqYVdWdWRERVBNQTBHCkExVUVDZ3dHYTNWaVpXUmlNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXdTVGMKMXlqOEhXNjJueW5rRmJYbzRWWEt2MmpDMFBNN2RQVmt5ODdGd2VaY1RLTG9XUVZQUUUycDJrTERLNk9Fc3p [...]
                    name: policy-btls-grpc/envoy-gateway-ca
                  sni: grpc-backend
                weight: 1
            failOpen: true
            forwardingMetadataNamespaces:
            - envoy.filters.http.ext_authz
            messageTimeout: 5s
            name: envoyextensionpolicy/default/policy-for-gateway/extproc/0
            receivingMetadataNamespaces:
            - envoy.filters.http.my_custom
            requestAttributes:
            - request.path
            requestBodyProcessingMode: Buffered
            requestHeaderProcessing: true
            responseAttributes:
            - xds.route_metadata
            - connection.requested_server_name
            responseBodyProcessingMode: Streamed
            responseHeaderProcessing: true
          - authority: grpc-backend-system-ca.default:9001
            destination:
              metadata:
                kind: EnvoyExtensionPolicy
                name: policy-for-gateway
                namespace: default
              name: envoyextensionpolicy/default/policy-for-gateway/extproc/1
              settings:
              - addressType: IP
                endpoints:
                - host: 9.9.9.9
                  port: 9001
                metadata:
                  kind: Service
                  name: grpc-backend-system-ca
                  namespace: default
                  sectionName: "9001"
                name: envoyextensionpolicy/default/policy-for-gateway/extproc/1/backend/0
                protocol: GRPC
                tls:
                  alpnProtocols: null
                  caCertificate:
                    name: system_ca_certificates
                  sni: grpc-backend-system-ca
                  useSystemTrustStore: true
                weight: 1
            name: envoyextensionpolicy/default/policy-for-gateway/extproc/1
            requestHeaderProcessing: true
            responseHeaderProcessing: true
        hostname: www.foo.com
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: httproute-1
          namespace: default
        name: httproute/default/httproute-1/rule/0/match/0/www_foo_com
        pathMatch:
          distinct: false
          name: ""
          prefix: /foo
      - destination:
          metadata:
            kind: HTTPRoute
            name: httproute-2
            namespace: default
          name: httproute/default/httproute-2/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.7
              port: 8080
            metadata:
              kind: Service
              name: service-1
              namespace: default
              sectionName: "8080"
            name: httproute/default/httproute-2/rule/0/backend/0
            protocol: HTTP
            weight: 1
        envoyExtensions:
          extProcs:
          - allowModeOverride: true
            authority: grpc-backend.envoy-gateway:8000
            destination:
              metadata:
                kind: EnvoyExtensionPolicy
                name: policy-for-gateway
                namespace: default
              name: envoyextensionpolicy/default/policy-for-gateway/extproc/0
              settings:
              - addressType: IP
                endpoints:
                - host: 7.7.7.7
                  port: 8000
                metadata:
                  kind: Service
                  name: grpc-backend
                  namespace: envoy-gateway
                  sectionName: "8000"
                name: envoyextensionpolicy/default/policy-for-gateway/extproc/0/backend/0
                protocol: GRPC
                tls:
                  alpnProtocols: null
                  caCertificate:
                    certificate: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKekNDQWcrZ0F3SUJBZ0lVQWw2VUtJdUttenRlODFjbGx6NVBmZE4ySWxJd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0l6RVFNQTRHQTFVRUF3d0hiWGxqYVdWdWRERVBNQTBHQTFVRUNnd0dhM1ZpWldSaU1CNFhEVEl6TVRBdwpNakExTkRFMU4xb1hEVEkwTVRBd01UQTFOREUxTjFvd0l6RVFNQTRHQTFVRUF3d0hiWGxqYVdWdWRERVBNQTBHCkExVUVDZ3dHYTNWaVpXUmlNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXdTVGMKMXlqOEhXNjJueW5rRmJYbzRWWEt2MmpDMFBNN2RQVmt5ODdGd2VaY1RLTG9XUVZQUUUycDJrTERLNk9Fc3p [...]
                    name: policy-btls-grpc/envoy-gateway-ca
                  sni: grpc-backend
                weight: 1
            failOpen: true
            forwardingMetadataNamespaces:
            - envoy.filters.http.ext_authz
            messageTimeout: 5s
            name: envoyextensionpolicy/default/policy-for-gateway/extproc/0
            receivingMetadataNamespaces:
            - envoy.filters.http.my_custom
            requestAttributes:
            - request.path
            requestBodyProcessingMode: Buffered
            requestHeaderProcessing: true
            responseAttributes:
            - xds.route_metadata
            - connection.requested_server_name
            responseBodyProcessingMode: Streamed
            responseHeaderProcessing: true
          - authority: grpc-backend-system-ca.default:9001
            destination:
              metadata:
                kind: EnvoyExtensionPolicy
                name: policy-for-gateway
                namespace: default
              name: envoyextensionpolicy/default/policy-for-gateway/extproc/1
              settings:
              - addressType: IP
                endpoints:
                - host: 9.9.9.9
                  port: 9001
                metadata:
                  kind: Service
                  name: grpc-backend-system-ca
                  namespace: default
                  sectionName: "9001"
                name: envoyextensionpolicy/default/policy-for-gateway/extproc/1/backend/0
                protocol: GRPC
                tls:
                  alpnProtocols: null
                  caCertificate:
                    name: system_ca_certificates
                  sni: grpc-backend-system-ca
                  useSystemTrustStore: true
                weight: 1
            name: envoyextensionpolicy/default/policy-for-gateway/extproc/1
            requestHeaderProcessing: true
            responseHeaderProcessing: true
        hostname: www.bar.com
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: httproute-2
          namespace: default
        name: httproute/default/httproute-2/rule/0/match/0/www_bar_com
        pathMatch:
          distinct: false
          name: ""
          prefix: /bar
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
